# authentic

./: .gitignore  README.md  manage.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: django.yaml  python-publish.yaml  python-publish.yml  release.yaml
authentic/: conf.py  errors.py  serializers.py  urls.py  views.py
authentic/authentication/: authenticator.py  urls.py  views.py
authentic/templates/email/: activation.html  recover_password.html
authentic/utils/: __init__.py  email.py  pagination.py
testproject/: __init__.py  settings.py  urls.py
tests/: __init__.py
