[tool.poetry]
name = "authentic"
version = "0.1.0"
description = "REST authentication for django apps."
authors = ["Igor Lopes <igor.lop.r@gmail.com>",]

maintainers = [
    "Igor Lopes <igor.lop.r@gmail.com>",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 5.0",  
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

packages = [
    { include = "authentic" },
]

repository = "https://github.com/ilopesr/authentic"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
django = "^5.0.2"
djangorestframework-simplejwt = "^5.3.1"
django-templated-mail = "^1.1.1"
pyright = "^1.1.352"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.3"
environs = "^10.3.0"
django-extensions= "^3.2.3"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
